@@ -183,6 +183,12 @@ module BoxGrinder
         @helper.should_receive(:open).with('http://169.254.169.254/1.0/meta-data/local-ipv4').and_return("IP")
         @helper.hw_virtualization_available?.should == false
       end
+
+      it "should return false if timeout exception is thrown" do
+        @helper.should_receive(:open).with('http://169.254.169.254/1.0/meta-data/local-ipv4').and_raise(Timeout::Error.new)
+        @helper.should_receive(:`).with('cat /proc/cpuinfo | grep flags | grep vmx | wc -l').and_return("0")
+        @helper.hw_virtualization_available?.should == false
+      end
     end
   end
 end
